output/shared/include/turing_api_wasm.h

void _host_strcpy(const char* location, uint32_t size);
void _host_f32_enqueue(float f);
float _host_f32_dequeue();