output/shared/include/core_wasm.h

/// Same as `_host_f32_enqueue` but bit-casts u32 into it instead
void _host_u32_enqueue(uint32_t u);
/// Same as `_host_f32_dequeue` but bit-casts to u32 before returning
uint32_t _host_u32_dequeue();